top section done

--- a/index.html
+++ b/index.html
@@ -5,9 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mission 2022</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="top">
+        <div class="half-width">
+            <div id="border" class="different-font">
+                <h1>Stay Focused on</h1>
+                <h1 class="orange-color">Mission 2022</h1>
+            </div>
+            <p>2022 is going to be the most challenging time for me. In this, year I'm going to become a Front-End Web Dev and at the same time going to give SSC Examination. Doing well in both of them is tough. But I am a conquerer!</p>
+            <a class="button" href="https://github.com/Marzan-Bin-Rahman">Explore Now</a>
+            <h4>Scroll down to know more about me</h4>
+        </div>
+        <div class="half-width">
+            <img src="images/person-5.png" alt="This my image">
+        </div>
+    </section>
 </body>
 </html>
