my mission 2022 section done

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="top">
+    <section class="top flex-display">
         <div class="half-width">
             <div id="border" class="different-font">
                 <h1>Stay Focused on</h1>
@@ -29,6 +29,26 @@
         </div>
         <div class="half-width">
             <img src="images/person-5.png" alt="This my image">
+        </div>
+    </section>
+    <section class="my-mission ">
+        <div class="headline"><h1>My Mission in <span class="orange-color">2022</span></h1></div>
+        <div class="box flex-display">
+            <div id="mission">
+                <img src="images/illustrator-1.png" alt="">
+                <h3>Mission</h3>
+                <p>My mission is to do well in SSC and also in Web sector. Besides I want myself to get admitted into NDC too!</p>
+            </div>
+            <div id="vission">
+                <img src="images/illustrator-2.png" alt="">
+                <h3>Vission</h3>
+                <p>I will be on top 5 on my school exam and also on board exam. And finally I also want to top in the Bootcamp Too!</p>
+            </div>
+            <div id="goals">
+                <img src="images/illustrator-3.png" alt="">
+                <h3>Goals</h3>
+                <p>I will make 12 websites for the complemetation of this Bootcamp and some extra websites for my practice.</p>
+            </div>
         </div>
     </section>
 </body>
