community section done

--- a/index.html
+++ b/index.html
@@ -51,5 +51,27 @@
             </div>
         </div>
     </section>
+    <section class="develop flex-display">
+        <div class="some-width">
+            <img src="images/coding.png" alt="">
+        </div>
+        <div class="much-width">
+            <h2>Develop </h2>
+            <h2>Without Limits</h2>
+            <p>I want to develop 12 websites for this Bootcamp and some for my practice. Again, I will make an attractive, responsive website for our school and a website for our school batchmates!</p>
+            <a class="button" href="https://github.com/Marzan-Bin-Rahman">Read the Documentation</a>
+        </div>
+    </section>
+    <section class="community flex-display">
+        <div class="much-width">
+            <h2>Know our</h2>
+            <h2>Global Community</h2>
+            <p>I am also connected with some global community. These community helps me a lot. I learn from them every single day. Because of being connected with them my communication skill increased very much.</p>
+            <a class="button" href="https://github.com/Marzan-Bin-Rahman">Read the Documentation</a>
+        </div>
+        <div class="some-width">
+            <img src="images/project.png" alt="">
+        </div>
+    </section>
 </body>
 </html>
