--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="top flex-display">
+    <section class="flex-display">
         <div class="half-width">
             <div id="border" class="different-font">
                 <h1>Stay Focused on</h1>
@@ -73,5 +73,25 @@
             <img src="images/project.png" alt="">
         </div>
     </section>
+    <section class="help ">
+        <div class="headline">
+            <h1>Help <span class="orange-color">The Needy</span></h1>
+        </div>
+        <div class="flex-display">
+            <div class="half-width">
+                <img src="images/girl-happy.png" alt="">
+            </div>
+            <div class="half-width">
+                <h1>Be for</h1>
+                <h1>The <span class="orange-color">Poor</span></h1>
+                <p>I have a cherised desire to help the poor people. We can artifically smile anytime. But when I help the poor and they smile a bit, my heart fills with satisfction. There smile is equal to my smile!!</p>
+                <a class="button" href="htps://github.com/Marzan-Bin-Rahman">Donate Us</a>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <h3>Mission <span id="pink-color">2022</span></h3>
+        <p>Hard work, Perseverance, and Determination for 2022</p>
+    </footer>
 </body>
 </html>
