--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h1 class="orange-color">Mission 2022</h1>
             </div>
             <p>2022 is going to be the most challenging time for me. In this, year I'm going to become a Front-End Web Dev and at the same time going to give SSC Examination. Doing well in both of them is tough. But I am a conquerer!</p>
-            <a class="button" href="https://github.com/Marzan-Bin-Rahman">Explore Now</a>
+            <a class="button-type" href="https://github.com/Marzan-Bin-Rahman" target="_blank">Explore Now</a>
             <h4>Scroll down to know more about me</h4>
         </div>
         <div class="half-width">
@@ -59,7 +59,7 @@
             <h2>Develop </h2>
             <h2>Without Limits</h2>
             <p>I want to develop 12 websites for this Bootcamp and some for my practice. Again, I will make an attractive, responsive website for our school and a website for our school batchmates!</p>
-            <a class="button" href="https://github.com/Marzan-Bin-Rahman">Read the Documentation</a>
+            <a class="button-type" href="https://github.com/Marzan-Bin-Rahman" target="_blank">Read the Documentation</a>
         </div>
     </section>
     <section class="community flex-display">
@@ -67,7 +67,7 @@
             <h2>Know our</h2>
             <h2>Global Community</h2>
             <p>I am also connected with some global community. These community helps me a lot. I learn from them every single day. Because of being connected with them my communication skill increased very much.</p>
-            <a class="button" href="https://github.com/Marzan-Bin-Rahman">Read the Documentation</a>
+            <a class="button-type" href="https://github.com/Marzan-Bin-Rahman" target="_blank">Read the Documentation</a>
         </div>
         <div class="some-width">
             <img src="images/project.png" alt="">
@@ -85,7 +85,7 @@
                 <h1>Be for</h1>
                 <h1>The <span class="orange-color">Poor</span></h1>
                 <p>I have a cherised desire to help the poor people. We can artifically smile anytime. But when I help the poor and they smile a bit, my heart fills with satisfction. There smile is equal to my smile!!</p>
-                <a class="button" href="htps://github.com/Marzan-Bin-Rahman">Donate Us</a>
+                <a class="button-type" href="https://github.com/Marzan-Bin-Rahman" target="_blank">Donate Us</a>
             </div>
         </div>
     </section>
