--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
         <div class="headline"><h1>My Mission in <span class="orange-color">2022</span></h1></div>
         <div class="box flex-display">
             <div id="mission">
-                <img src="images/illustrator-1.png" alt="">
+                <img src="images/illustrator-1.png" alt="This is an illustration">
                 <h3>Mission</h3>
                 <p>My mission is to do well in SSC and also in Web sector. Besides I want myself to get admitted into NDC too!</p>
             </div>
             <div id="vission">
-                <img src="images/illustrator-2.png" alt="">
+                <img src="images/illustrator-2.png" alt="This is an illustration">
                 <h3>Vission</h3>
                 <p>I will be on top 5 on my school exam and also on board exam. And finally I also want to top in the Bootcamp Too!</p>
             </div>
             <div id="goals">
-                <img src="images/illustrator-3.png" alt="">
+                <img src="images/illustrator-3.png" alt="This is an illustration">
                 <h3>Goals</h3>
                 <p>I will make 12 websites for the complemetation of this Bootcamp and some extra websites for my practice.</p>
             </div>
@@ -53,7 +53,7 @@
     </section>
     <section class="develop flex-display">
         <div class="some-width">
-            <img src="images/coding.png" alt="">
+            <img src="images/coding.png" alt="Two afamoni is doing something on laptop">
         </div>
         <div class="much-width">
             <h2>Develop </h2>
@@ -70,7 +70,7 @@
             <a class="button-type" href="https://github.com/Marzan-Bin-Rahman" target="_blank">Read the Documentation</a>
         </div>
         <div class="some-width">
-            <img src="images/project.png" alt="">
+            <img src="images/project.png" alt="Some people are discussing">
         </div>
     </section>
     <section class="help ">
@@ -91,7 +91,7 @@
     </section>
     <footer class="footer">
         <h3>Mission <span id="pink-color">2022</span></h3>
-        <p>Hard work, Perseverance, and Determination for 2022</p>
+        <p>Hard work, Perseverance, and Determination for 2022. Just KOPE hobe!</p>
     </footer>
 </body>
 </html>
