--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="images/shape-1.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -24,8 +25,8 @@
                 <h1 class="orange-color">Mission 2022</h1>
             </div>
             <p>2022 is going to be the most challenging time for me. In this, year I'm going to become a Front-End Web Dev and at the same time going to give SSC Examination. Doing well in both of them is tough. But I am a conquerer!</p>
-            <a class="button-type" href="https://github.com/Marzan-Bin-Rahman" target="_blank">Explore Now</a>
-            <h4>Scroll down to know more about me</h4>
+            <a class="button-type" href="https://github.com/Marzan-Bin-Rahman" target="_blank">Know About Me</a>
+            <p>Scroll down to know more about me</p>
         </div>
         <div class="half-width">
             <img src="images/person-5.png" alt="This my image">
