--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <p>2022 is going to be the most challenging time for me. In this, year I'm going to become a Front-End Web Dev and at the same time going to give SSC Examination. Doing well in both of them is tough. But I am a conquerer!</p>
             <a class="button-type" href="https://github.com/Marzan-Bin-Rahman" target="_blank">Know About Me</a>
-            <p>Scroll down to know more about me</p>
+            <p id="scroll">Scroll down to know more about me</p>
         </div>
         <div class="half-width">
             <img src="images/person-5.png" alt="This my image">
